# mgStd

./: Makefile.am  README.md  configure.ac  configure.in
doc/: libac-uv-v0.11.25.patch  libuv-source.tar  mgMurmurhash.rst  mgStd.rst  mglist.rst  mgmd5.rst  mgsha1.rst  mgtime.rst
src/: Makefile  Makefile.am  Makefile.in  ev_libcurl.c  icmp.c  icmp.h  mainloop.c  mainloop.h  mgBstree.c  mgBstree.h  mgBstree_test.c  mgLitezip_test.c  mgMurmurhash.c  mgMurmurhash.h  mgMurmurhash_test.c  mgRSA.c  mgStd.h  mgavltree.c  mgavltree.h  mgavltree_test.c  mgbase64.c  mgbase64.h  mgbitmap.c  mgbitmap.h  mgbstree.c  mgbstree.h  mgcrc32.c  mgcrc32.h  mgcrc32_test.c  mgfastsort.c  mgfastsort.h  mgfastsort_test.c  mgframe_share.c  mghashtable.c  mghlist_test.c  mghmac_md5.c  mghmac_md5.h  mghmac_md5_test.c  mglibcurl.c  mglist.c  (+34 more)
src/test/: mainloop_test.c  mgbase64_test.c  mgbstree_test.c  mgcrc32_test.c  mgfastsort_test.c  mghlist_test.c  mglitezip_test.c  mgmurmurhash_test.c  mgprocess_rate_test.c  mgsha256_test.c  mgsha384_test.c  mgstack_test.c  ping_test.c
